--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=puwnd-test-project
-sonar.organization=puwnd-test
+sonar.projectKey=puwnd_test-sonar
+sonar.organization=puwnd
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=puwnd-test-project
+#sonar.projectName=test-sonar
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
